Fix Tailwind PostCSS configuration

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "latest",
     "tailwindcss": "latest",
     "postcss": "latest",
-    "autoprefixer": "latest"
+    "autoprefixer": "latest",
+    "@tailwindcss/postcss": "latest"
   }
 }
