--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/node": "latest",
     "tailwindcss": "latest",
     "postcss": "latest",
-    "autoprefixer": "latest",
-    "@tailwindcss/postcss": "latest"
+    "autoprefixer": "latest"
   }
 }
