--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "better-sqlite3": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
