--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "better-sqlite3": "^9.0.0",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "better-sqlite3": "^9.0.0"
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
+    "@unocss/postcss": "^66.1.3",
+    "@unocss/reset": "^66.1.3",
     "typescript": "latest",
-    "@unocss/next": "latest",
-    "unocss": "latest"
+    "unocss": "^66.1.3"
   }
 }
