--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "unocss": "unocss -o uno.css",
-    "build": "npm run unocss && next build",
+    "build": "next build",
     "start": "next start"
   },
   "keywords": [],
@@ -24,6 +23,9 @@
     "@types/react": "latest",
     "@unocss/postcss": "^66.1.3",
     "@unocss/reset": "^66.1.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "postcss-loader": "^8.1.1",
     "typescript": "latest",
     "unocss": "^66.1.3"
   }
