--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "better-sqlite3": "^9.0.0",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@types/node": "latest",
