--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "type": "module",
   "dependencies": {
     "better-sqlite3": "^9.0.0",
+    "emoji-picker-react": "^4.12.2",
+    "framer-motion": "^12.16.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
