--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "better-sqlite3": "^9.0.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.16.0",
+    "lucide-react": "^0.514.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "latest",
