--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "unocss": "unocss \"**/*.{tsx,ts,js,jsx,html}\" -o uno.css"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "react": "latest",
     "react-dom": "latest",
     "swr": "^2.3.3",
+    "ts-node": "^10.9.2",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
