--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "better-sqlite3": "^9.0.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.17.3",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.514.0",
     "next": "latest",
