--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
-    "tailwindcss": "latest",
-    "daisyui": "latest",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4",
+    "daisyui": "latest",
+    "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
-    "@tailwindcss/postcss": "^0.1.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "latest"
   }
 }
