--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "better-sqlite3": "^9.0.0",
+    "@clickhouse/client": "^0.28.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.17.3",
     "lodash": "^4.17.21",
