--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-plotly.js": "^2.6.0",
+    "@tanstack/react-virtual": "^3.0.0",
     "swr": "^2.3.3",
     "ts-node": "^10.9.2",
     "zustand": "^5.0.5"
