--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
+    "@next/bundle-analyzer": "^13.5.0",
     "@unocss/postcss": "^66.1.3",
     "@unocss/reset": "^66.1.3",
     "autoprefixer": "^10.4.21",
