--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "class-variance-authority": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
     "@unocss/postcss": "^66.1.3",
