--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
-    "start": "next start",
-    "unocss": "unocss \"**/*.{tsx,ts,js,jsx,html}\" -o uno.css"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
@@ -32,12 +31,9 @@
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
-    "@unocss/postcss": "^66.1.3",
-    "@unocss/reset": "^66.1.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "postcss-loader": "^8.1.1",
-    "typescript": "latest",
-    "unocss": "^66.1.3"
+    "typescript": "latest"
   }
 }
