--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "autoprefixer": "^10.4.21",
+    "daisyui": "^3.9.4",
     "postcss": "^8.5.4",
     "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "latest"
   }
 }
