--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
+    "@types/sass": "^1.45.0",
     "autoprefixer": "^10.4.21",
     "daisyui": "^3.9.4",
-    "postcss": "^8.5.4",
+    "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "latest"
   }
 }
