--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.514.0",
     "next": "latest",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^8.0.0",
     "plotly.js-dist": "^2.30.0",
     "react": "latest",
     "react-dom": "latest",
