--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^8.0.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-virtual": "^3.13.12",
     "better-sqlite3": "^9.0.0",
+    "clsx": "^2.1.1",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.17.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.514.0",
     "next": "latest",
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^8.0.0",
     "plotly.js-dist": "^2.30.0",
     "react": "latest",
     "react-dom": "latest",
