--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "framer-motion": "^12.17.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.514.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.6.82",
+    "file-saver": "^2.0.5",
     "next": "latest",
     "plotly.js-dist": "^2.30.0",
     "react": "latest",
