feat: switch to postgres

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-virtual": "^3.13.12",
-    "better-sqlite3": "^9.0.0",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.17.3",
@@ -27,6 +26,9 @@
     "file-saver": "^2.0.5",
     "next": "latest",
     "plotly.js-dist": "^2.30.0",
+    "pg": "^8.11.3",
+    "csv-parse": "^5.5.4",
+    "dotenv": "^16.4.5",
     "react": "latest",
     "react-dom": "latest",
     "react-plotly.js": "^2.6.0",
